--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             android:name=".Archive"
             android:label="@string/title_activity_archive"
             android:theme="@style/AppThemeLight.NoActionBar"/>
+
+
+        <service android:name=".NotificationHeadless" />
     </application>
 
 </manifest>
