--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,17 +9,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    packagingOptions {
-        pickFirst 'lib/armeabi-v7a/libassmidi.so'
-        pickFirst 'lib/x86/libassmidi.so'
     }
 }
 
@@ -36,7 +31,7 @@ dependencies {
     implementation 'com.jaredrummler:colorpicker:1.0.2' //color picker library
     implementation 'com.github.k0shk0sh:RetainedDateTimePickers:1.0.2' //time/date picker library
     implementation 'com.andrognito.flashbar:flashbar:1.0.2' //alert library
-    implementation 'net.danlew:android.joda:2.9.9.4' //time library
+    implementation 'joda-time:joda-time:2.9.9' //time library
     implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.6.0' //fix for joda-time gson saving.
     implementation "android.arch.work:work-runtime:$work_version"//work-manager
     debugImplementation 'com.pixiteapps.billingx:billingx:0.8.0'//donations
@@ -50,5 +45,3 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
 }
-
-
