--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,14 +12,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    def work_version = "1.0.0-alpha03"
+    def work_version = "1.0.0-alpha04"
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -45,3 +45,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
 }
+
