last build before tag database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="@string/title_activity_tag_select"
             android:theme="@style/AppThemeLight.NoActionBar" />
         <activity
-            android:name=".createTag"
+            android:name=".CreateTag"
             android:label="@string/title_activity_create_tag"
             android:theme="@style/AppThemeLight.NoActionBar" />
         <activity
