--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.andb.apps.todo"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "app_name", "ToDo"
     }
     buildTypes {
@@ -30,10 +30,10 @@ dependencies {
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     implementation 'com.google.code.gson:gson:2.8.5' //translates arraylists into savedpreference-compatible json
     implementation 'com.jaredrummler:colorpicker:1.0.2' //color picker library
     implementation 'com.github.k0shk0sh:RetainedDateTimePickers:1.0.2' //time/date picker library
@@ -41,12 +41,13 @@ dependencies {
     implementation 'joda-time:joda-time:2.9.9' //time library
     implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.6.0' //fix for joda-time gson saving.
     implementation "android.arch.work:work-runtime:$work_version"//work-manager
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-    testImplementation "android.arch.persistence.room:testing:$room_version"// Test helpers
+    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha02'// Test helpers
     debugImplementation 'com.pixiteapps.billingx:billingx:0.8.0'//donations
     releaseImplementation 'com.android.billingclient:billing:1.0' //donations release
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
+
 
     api 'com.google.guava:guava:25.1-android'
 
@@ -55,8 +56,9 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
 
