--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     releaseImplementation 'com.android.billingclient:billing:1.0' //donations release
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
     implementation 'com.afollestad:aesthetic:1.0.0-beta05'//theming library
+    implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
+
 
 
     api 'com.google.guava:guava:25.1-android'
