--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
     implementation 'com.afollestad:aesthetic:1.0.0-beta05'//theming library
     implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
+    implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT'
+
 
 
 
