--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: "kotlin-android"
+
 
 android {
     compileSdkVersion 28
@@ -21,6 +23,9 @@ android {
             resValue "string", "app_name", "ToDo Beta"
         }
     }
+    packagingOptions{
+        exclude('META-INF/library_release.kotlin_module')
+    }
 }
 
 dependencies {
@@ -35,7 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     implementation 'com.google.code.gson:gson:2.8.5' //translates arraylists into savedpreference-compatible json
-    implementation 'com.jaredrummler:colorpicker:1.0.2' //color picker library
+    implementation 'com.jaredrummler:colorpicker:1.0.5' //color picker library
     implementation 'com.github.k0shk0sh:RetainedDateTimePickers:1.0.2' //time/date picker library
     implementation 'com.andrognito.flashbar:flashbar:1.0.2' //alert library
     implementation 'joda-time:joda-time:2.9.9' //time library
@@ -50,6 +55,7 @@ dependencies {
     implementation 'com.afollestad:aesthetic:1.0.0-beta05'//theming library
     implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
     implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT'
+
 
 
 
