--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeLight.NoActionBar">
+        android:theme="@style/AppThemeLight.NoActionBar"
+        android:name=".App">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -35,13 +37,9 @@
             android:label="@string/title_activity_create_tag"
             android:theme="@style/AppThemeLight.NoActionBar" />
         <activity
-            android:name=".TaskView"
-            android:label="@string/title_activity_task_view"
-            android:theme="@style/AppThemeLightCollapse" />
-        <activity
             android:name=".Archive"
             android:label="@string/title_activity_archive"
-            android:theme="@style/AppThemeLight.NoActionBar" />
+            android:theme="@style/AppThemeLightCollapse" />
         <activity
             android:name=".Reschedule"
             android:exported="true"
