--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.andb.apps.todo">
 
     <application
@@ -7,13 +8,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeLight.NoActionBar"
-        android:name=".App">
+        android:theme="@style/AppThemeGlobal"
+        android:name=".App"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppThemeLight.Launcher">
+            android:theme="@style/AppThemeGlobal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,15 +29,15 @@
         <activity
             android:name=".AddTask"
             android:label="@string/title_activity_add_list"
-            android:theme="@style/AppThemeLight.NoActionBar" />
+            android:theme="@style/AppThemeGlobal" />
         <activity
             android:name=".TagSelect"
             android:label="@string/title_activity_tag_select"
-            android:theme="@style/AppThemeLight.NoActionBar" />
+            android:theme="@style/AppThemeGlobal" />
         <activity
             android:name=".CreateTag"
             android:label="@string/title_activity_create_tag"
-            android:theme="@style/AppThemeLight.NoActionBar" />
+            android:theme="@style/AppThemeGlobal" />
         <activity
             android:name=".Archive"
             android:label="@string/title_activity_archive"
@@ -55,7 +57,7 @@
         <activity
             android:name=".SearchResultsActivity"
             android:label="@string/title_activity_search"
-            android:theme="@style/AppThemeLight.NoActionBar">
+            android:theme="@style/AppThemeGlobal">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
