--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     packagingOptions{
         exclude('META-INF/library_release.kotlin_module')
     }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -46,15 +50,19 @@ dependencies {
     implementation 'joda-time:joda-time:2.9.9' //time library
     implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.6.0' //fix for joda-time gson saving.
     implementation "android.arch.work:work-runtime:$work_version"//work-manager
-    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha02'//sql database
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'//sql database
     testImplementation 'androidx.room:room-testing:2.1.0-alpha02'// Test helpers
     debugImplementation 'com.pixiteapps.billingx:billingx:0.8.0'//donations
     releaseImplementation 'com.android.billingclient:billing:1.0' //donations release
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
     implementation 'com.jaredrummler:cyanea:1.0.1'//theming library
     implementation 'me.saket:inboxrecyclerview:1.0.0-rc1'//inbox-like transitions
-    implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT'
+    implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT'//preferences
+    implementation 'com.jakewharton:butterknife:9.0.0-rc2'//butterknife
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'//butterknife annotations
+
+
 
 
 
