add task refactor + tagselect klaster implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT'//preferences
     implementation 'com.jakewharton:butterknife:9.0.0-rc2'//butterknife
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'//butterknife annotations
+    implementation 'com.github.rongi:klaster:0.3.4'//inline recyclerviews for simple implementations
+
 
 
 
