--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.github.Maxr1998:ModernAndroidPreferences:-SNAPSHOT' //preferences
     implementation 'com.github.rongi:klaster:0.3.4' //inline recyclerviews for simple implementations
     implementation 'com.afollestad:material-cab:1.3.1' //contextual action bar library
+    implementation 'com.jonathanfinerty.once:once:1.2.2'
     implementation project(path: ':inboxrecyclerview')
 
     api 'com.google.guava:guava:25.1-android'
