--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 3
-        versionName "0.9.1"
+        versionName "alpha-1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "app_name", "ToDo"
         javaCompileOptions {
@@ -48,8 +48,6 @@ android {
 }
 
 dependencies {
-    def work_version = "1.0.0-beta01"
-    def room_version = "2.1.0-alpha03"
 
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -68,12 +66,12 @@ dependencies {
     //implementation 'com.andrognito.flashbar:flashbar:1.0.2' //alert library
     implementation 'joda-time:joda-time:2.9.9' //time library
     implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.6.0' //fix for joda-time gson saving.
-    implementation "android.arch.work:work-runtime:$work_version" //work-manager
-    implementation "androidx.room:room-runtime:$room_version" //sql database
-    kapt "androidx.room:room-compiler:$room_version" //sql database
+    implementation "android.arch.work:work-runtime:1.0.0-rc02" //work-manager
+    implementation "androidx.room:room-runtime:2.1.0-alpha04" //sql database
+    kapt "androidx.room:room-compiler:2.1.0-alpha04" //sql database
     implementation 'com.github.MatrixDev.Roomigrant:RoomigrantLib:0.1.7'//room migrations
     kapt 'com.github.MatrixDev.Roomigrant:RoomigrantCompiler:0.1.7'//room migrations
-    testImplementation "androidx.room:room-testing:$room_version" // Test helpers
+    testImplementation "androidx.room:room-testing:2.1.0-alpha04" // Test helpers
 
     implementation 'org.greenrobot:eventbus:3.1.1' //communicate across threads
     implementation 'com.jaredrummler:cyanea:1.0.1' //theming library
@@ -83,6 +81,11 @@ dependencies {
     implementation 'com.afollestad:material-cab:1.3.1' //contextual action bar library
     implementation 'com.jonathanfinerty.once:once:1.2.2'//one-off operations
     //implementation 'com.cuneytayyildiz:onboarder:1.0.3'//onboarding library
+
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'//zoomable imageview for location picker
+    implementation 'com.github.pengrad:mapscaleview:1.4.1' //scale for mapview
+    implementation 'com.google.android.gms:play-services-location:16.0.0' //geofence services
+
     implementation project(path: ':inboxrecyclerview')
     implementation project(path: ':onboarder')
 
@@ -90,6 +93,7 @@ dependencies {
     api 'com.google.guava:guava:25.1-android'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
 }
 
