--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 3
         versionName "alpha-1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resValue "string", "app_name", "ToDo"
+        resValue "string", "app_name", "Index"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
@@ -31,7 +31,7 @@ android {
         }
         debug {
             applicationIdSuffix '.debug'
-            resValue "string", "app_name", "ToDo Beta"
+            resValue "string", "app_name", "Index Beta"
             resValue "bool", "DEBUG", "true"
 
         }
